--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URL=mongodb+srv://admin:admin@cluster0.c1p50.mongodb.net/research_management_db?retryWrites=true&w=majority
+
+JWT_SECRET=pamuduhansanioshini
