--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "nodemon": "^2.0.16"
+    "multer": "^1.4.3",
+    "multer-gridfs-storage": "^5.0.1",
+    "nodemon": "^2.0.16",
+    "socket.io": "^4.1.3"
   }
 }
