--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.1",
     "nodemon": "^2.0.16",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "supertest": "^6.2.3"
   }
 }
